[package]
name = "sql-query-engine-rs"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
arrow = { version = "20", features = ["prettyprint", "simd"] }
tokio = { version = "1", features = ["full"] }
futures-async-stream = "0.2"
futures = "0.3"
thiserror = "1.0.31"
sqlparser = { version = "0.21", features = ["serde"] }
itertools = "0.10"
downcast-rs = "1"
paste = "1"
rustyline = "10"
dirs = "4"
ahash = { version = "0.8", default-features = false, features = ["runtime-rng"] }
petgraph = "0.6"
enum_dispatch = "0.3"
lazy_static = "1"
strum = "0.24"
strum_macros = "0.24"

[dev-dependencies]
test-case = "2"

[workspace]
members = [
  "tests/sqllogictest",
]
